Spelling And fix for button padding on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,7 @@ h1, h2, h3{
 	height: 50px;
 	background-color: black;
 	padding: 10px;
+	margin-bottom:50px;
 	position: sticky;
 }
 
